# CNotes

./: CMakeLists.txt  README.md  main.c
include/: check.h  utils.h
src/: check.c  main.c  utils.c
